Changes for Java 8 #333